# rom-analyzer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  recreate_33520003_project.py
out_pre_task/: crc-region.toml  description.ld  match-report.md
reference/: .33520003.json.swp  30200003.json  33520003.json  33520003.xml  39670016.json  47110032.json  SHA256SUMS  c7280010.json  e5090011.json  registry.toml
rom_analyzer/: __init__.py  agent_enrich.py  annotations_io.py  callgraph.py  can_slots.py  cleanup.py  cli.py  crc.py  data_refs.py  diff.py  emit_ld.py  enrich.py  flash_space.py  ghidra.py  ghidra_overlay.py  merge.py  mode23_bindings.py  mut_table.py  obd_analysis.py  obd_std_pids.py  parsers.py  propagate.py  ram_signature.py  ram_space.py  registry.py  types.py  xml_io.py
scripts/: agent_enrich_apply.py  agent_enrich_decompile.py  agent_enrich_init.py  agent_enrich_init_vars.py  check_reference_name_uniqueness.py  dma_activation.py  dma_activation_analysis.py  dma_decode_funcs.py  dma_obd_decode.py  dump_references.py  enrich_apply.py  enrich_decompile.py  enrich_init.py  enrich_init_vars.py  m32r_analysis.py  run-audm-colt-local.sh  run-e2e.sh  run-outlander-local.sh
tests/: conftest.py  test_agent_enrich.py  test_annotations_io.py  test_callgraph.py  test_can_slots.py  test_colt_parsers.py  test_crc.py  test_data_refs.py  test_dedup_names.py  test_diff.py  test_e2e_cross_rom.py  test_e2e_decompile.py  test_e2e_self_diff.py  test_emit_ld.py  test_emit_provenance.py  test_enrich.py  test_flash_space.py  (+14 more)
(+33 files in other folders)
