[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rom-analyzer"
version = "0.2.0"
description = "M32R ROM analyzer: headless Ghidra + ghidriff producing linker fragments for mmc-patches"
authors = [{ name = "Aleksei Markelov", email = "markelovai@gmail.com" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click >= 8.1, < 9",
    "lxml >= 5, < 6",
    "tomli-w >= 1.0, < 2",
    "ghidriff @ git+https://github.com/RcusStackwalker/ghidriff.git",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8",
    "pytest-cov >= 5",
]

[project.scripts]
rom-analyzer = "rom_analyzer.cli:main"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end test requiring Ghidra + ghidriff in environment",
]
addopts = "-m 'not e2e'"

[tool.hatch.build.targets.wheel]
packages = ["rom_analyzer"]
